<resources>
    <string name="app_name">LetsChat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="optional">Optional</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="show_password">Show Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_n_password">Forgot\nPassword</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="date_format">yyyyMMdd_HHmmss</string>
</resources>