<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/login"
                android:textColor="@color/appColorDark"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="7"
            android:orientation="vertical"
            tools:context=".activity.LoginActivity">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="15dp"
                android:fontFamily="@font/roboto_slab"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColor="@color/appColorDark"
                tools:ignore="Autofill,RtlSymmetry" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="15dp"
                    android:fontFamily="@font/roboto_slab"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/appColorDark"
                    tools:ignore="Autofill" />

                <ImageView
                    android:id="@+id/showPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/show_password"
                    android:src="@drawable/ic_visibility" />

                <ImageView
                    android:id="@+id/hidePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/hide_password"
                    android:src="@drawable/ic_visibility_off"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/forgot_password"
                android:textColor="@color/appColor"
                android:textSize="14sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/appColorDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btnRegister"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textColor="@color/appColorDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</layout>