<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activity.LoginActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/forgot_n_password"
            android:textAlignment="center"
            android:textColor="@color/appColorDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sendEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColor="@color/appColorDark"
            tools:ignore="Autofill,RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center"
                android:text="@string/send_email"
                android:textAllCaps="true"
                android:textColor="@color/appColorDark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</layout>