<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="onClick"
            type="com.rsa.letschat.utils.ClickHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scrollbars="none"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                tools:context=".ui.activity.LoginActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/register"
                    android:textAlignment="center"
                    android:textColor="@color/appColorDark"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/pickImage"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:onClick="@{(view)->onClick.onHandleClick(view)}"
                        android:src="@drawable/profile_placeholder" />

                    <TextView
                        android:id="@+id/tvOptional"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:alpha="0.4"
                        android:fontFamily="@font/roboto_slab"
                        android:text="@string/optional"
                        android:textSize="14sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_background"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/roboto_slab"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="10dp"
                        android:textColor="@color/appColorDark"
                        tools:ignore="Autofill,RtlSymmetry" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edit_text_background"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/roboto_slab"
                        android:hint="@string/full_name"
                        android:inputType="text"
                        android:paddingStart="10dp"
                        android:textColor="@color/appColorDark"
                        tools:ignore="Autofill,RtlSymmetry" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:autofillHints=""
                            android:background="@drawable/edit_text_background"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawablePadding="15dp"
                            android:fontFamily="@font/roboto_slab"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingStart="10dp"
                            android:paddingEnd="15dp"
                            android:textColor="@color/appColorDark" />

                        <ImageView
                            android:id="@+id/showPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:onClick="@{(view)->onClick.onHandleClick(view)}"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="15dp"
                            android:contentDescription="@string/show_password"
                            android:src="@drawable/ic_visibility" />

                        <ImageView
                            android:id="@+id/hidePassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="15dp"
                            android:onClick="@{(view)->onClick.onHandleClick(view)}"
                            android:contentDescription="@string/hide_password"
                            android:src="@drawable/ic_visibility_off"
                            android:visibility="gone" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btnRegister"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_background"
                        android:fontFamily="@font/roboto_slab"
                        android:gravity="center"
                        android:onClick="@{(view)->onClick.onHandleClick(view)}"
                        android:text="@string/register"
                        android:textAllCaps="true"
                        android:textColor="@color/appColorDark"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>